--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,67 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.eguller</groupId>
-  <artifactId>mouserecorder</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.eguller</groupId>
+    <artifactId>mouserecorder</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-  <name>MouseRecorder</name>
-  <url>https://github.com/eguller/MouseRecorder</url>
+    <name>MouseRecorder</name>
+    <url>https://github.com/eguller/MouseRecorder</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jnativehook.artifactId>jnativehook</jnativehook.artifactId>
+        <jnativehook.version>1.1.4</jnativehook.version>
+        <jnativehook.jar>${jnativehook.artifactId}-${jnativehook.version}.jar</jnativehook.jar>
+        <jnativehook.dir>${project.basedir}/src/local-libs/org/${jnativehook.artifactId}/${jnativehook.artifactId}/${jnativehook.version}</jnativehook.dir>
+        <jnativehook.absolute>
+            ${jnativehook.dir}/${jnativehook.jar}
+        </jnativehook.absolute>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>org.jnativehook</groupId>
-          <artifactId>jnativehook</artifactId>
-          <scope>system</scope>
-          <version>1.1.4</version>
-          <systemPath>${project.basedir}/src/local-libs/org/jnativehook/jnativehook/1.1.4/jnativehook-1.1.4.jar</systemPath>
-      </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jnativehook</groupId>
+            <artifactId>jnativehook</artifactId>
+            <scope>system</scope>
+            <version>1.1.4</version>
+            <systemPath>${jnativehook.absolute}</systemPath>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <property name="project.jar" value="${artifactId}-${version}.jar"/>
+                                <property name="jnativehook.jar" value="${jnativehook.jar}"/>
+                                <property name="jnativehook.absolute" value="${jnativehook.absolute}" />
+                                <property name="jnativehook.dir" value="${jnativehook.dir}" />
+                                <ant antfile="ant/build.xml"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+
 </project>
