--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
             <plugin>
                 <groupId>com.akathist.maven.plugins.launch4j</groupId>
                 <artifactId>launch4j-maven-plugin</artifactId>
+                <version>1.5.2</version>
                 <executions>
                     <execution>
                         <id>l4j-gui</id>
