--- a/pom.xml
+++ b/pom.xml
@@ -15,19 +15,15 @@
         <jnativehook.artifactId>jnativehook</jnativehook.artifactId>
         <jnativehook.version>1.1.4</jnativehook.version>
         <jnativehook.jar>${jnativehook.artifactId}-${jnativehook.version}.jar</jnativehook.jar>
-        <jnativehook.dir>${project.basedir}/src/local-libs/org/${jnativehook.artifactId}/${jnativehook.artifactId}/${jnativehook.version}</jnativehook.dir>
+        <jnativehook.dir>
+            ${project.basedir}/src/local-libs/org/${jnativehook.artifactId}/${jnativehook.artifactId}/${jnativehook.version}
+        </jnativehook.dir>
         <jnativehook.absolute>
             ${jnativehook.dir}/${jnativehook.jar}
         </jnativehook.absolute>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.jnativehook</groupId>
             <artifactId>jnativehook</artifactId>
@@ -38,6 +34,7 @@
         <dependency>
             <groupId>com.akathist.maven.plugins.launch4j</groupId>
             <artifactId>launch4j-maven-plugin</artifactId>
+            <scope>provided</scope>
             <version>1.5.2</version>
         </dependency>
         <dependency>
@@ -46,12 +43,47 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.tulskiy</groupId>
+            <artifactId>jkeymaster</artifactId>
+            <scope>compile</scope>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <dependencySets>
+                        <dependencySet>
+                            <excludes>
+                                <exclude>com.akathist.maven.plugins.launch4j:launch4j-maven-plugin</exclude>
+                                <exclude>junit:junit</exclude>
+                            </excludes>
+                            <includes>
+                                <include>org.jnativehook:jnativehook</include>
+                            </includes>
+                        </dependencySet>
+                    </dependencySets>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.7</version>
                 <executions>
@@ -59,10 +91,11 @@
                         <phase>package</phase>
                         <configuration>
                             <target>
-                                <property name="project.jar" value="${artifactId}-${version}.jar"/>
+                                <property name="project.jar"
+                                          value="${artifactId}-${version}-jar-with-dependencies.jar"/>
                                 <property name="jnativehook.jar" value="${jnativehook.jar}"/>
-                                <property name="jnativehook.absolute" value="${jnativehook.absolute}" />
-                                <property name="jnativehook.dir" value="${jnativehook.dir}" />
+                                <property name="jnativehook.absolute" value="${jnativehook.absolute}"/>
+                                <property name="jnativehook.dir" value="${jnativehook.dir}"/>
                                 <ant antfile="ant/build.xml"/>
                             </target>
                         </configuration>
@@ -80,7 +113,9 @@
                     <execution>
                         <id>l4j-gui</id>
                         <phase>package</phase>
-                        <goals><goal>launch4j</goal></goals>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
                         <configuration>
                             <headerType>gui</headerType>
                             <outfile>target/Mouse Recorder.exe</outfile>
