--- a/ant/build.xml
+++ b/ant/build.xml
@@ -60,6 +60,7 @@
             </archives>
             <manifest>
                 <attribute name="Main-Class" value="${main.class}"/>
+                <attribute name="Version" value="${project.version}"/>
             </manifest>
 
         </jar>
