--- a/mac-resources/Info.plist
+++ b/mac-resources/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleAllowMixedLocalizations</key>
 	<string>true</string>
 	<key>CFBundleExecutable</key>
-	<string>JavaApplicationStub</string>
+	<string>universalApplicationStub</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundlePackageType</key>
@@ -31,7 +31,7 @@
 		<key>Arguments</key>
 		<string>com.eguller.mouserecorder.MouseRecorder</string>
 		<key>ClassPath</key>
-			<string>$JAVAROOT/mouserecorder.jar</string>
+		<string>Java/mouserecorder.jar</string>
 	</dict>
 </dict>
 </plist>
