--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.eguller</groupId>
     <artifactId>mouserecorder</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>MouseRecorder</name>
@@ -119,7 +119,7 @@
                         </goals>
                         <configuration>
                             <headerType>gui</headerType>
-                            <outfile>target/Mouse Recorder.exe</outfile>
+                            <outfile>target/MouseRecorder.exe</outfile>
                             <jar>target/mouserecorder.jar</jar>
                             <errTitle>Mouse Recorder - Launch Error</errTitle>
                             <icon>${project.basedir}/src/main/resources/mouse-recorder.ico</icon>
@@ -138,7 +138,7 @@
                                 <txtProductVersion>${project.version}</txtProductVersion>
                                 <productName>Mouse Recorder</productName>
                                 <internalName>MouseRecorder</internalName>
-                                <originalFilename>Mouse Recorder.exe</originalFilename>
+                                <originalFilename>MouseRecorder.exe</originalFilename>
                             </versionInfo>
                         </configuration>
                     </execution>
