--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.eguller</groupId>
     <artifactId>mouserecorder</artifactId>
-    <version>1.1-SNAPHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <name>MouseRecorder</name>
